objects/skuid__Theme__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>skuid__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Resource_Namespace__c</fullName>
        <label>Resource Namespace</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Theme</label>
</CustomObject>